<resources>
    <string name="app_name">BootcampMealApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="or_text">OR</string>
    <string name="sign_up_here_text">Sign Up Here!</string>
    <string name="sign_in_here_text">Sign In Here!</string>
    <string name="already_have_an_account_text">Already Have An Account?</string>
    <string name="meals_text">Meals</string>
    <string name="detail_text">Detail</string>
    <string name="order_text">Order</string>
    <string name="favorite_text">Favorite</string>
    <string name="minus_text">-</string>
    <string name="plus_text">+</string>
    <string name="detail_page_price_tv">%1\$d ₺</string>
    <string name="add_to_card_text">Add To Card</string>
    <string name="emailFormatErrorText">Please enter a correct email address!</string>
    <string name="emailAlreadyRegistered">The email address is already in use by another account.</string>
    <string name="passwordFormatErrorText">Password should be 6 characters or longer!</string>
    <string name="passwordShortText">Password is too short</string>
    <string name="okText">OK</string>
    <string name="price_text">Fiyat: </string>
    <string name="quantity_text">Adet: </string>
    <string name="price_format">%d \₺</string>
    <string name="add_to_favorite_text">Favorilere eklendi!</string>
    <string name="delete_from_favorite_text">Favorilerden silindi!</string>
    <string name="are_you_sure_exit">Are You Sure For Exit ?</string>
    <string name="no_text">NO</string>
    <string name="total_price_text">Total : %d \₺</string>
    <string name="complete_order_text">Complete Order</string>

</resources>